force-app/main/default/objects/Consent_Compass__c/Consent_Compass__c.object-meta.xml
<CustomObject>
    <label>Compass Consent</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compass Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>