force-app/main/default/objects/Consent_Compass__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>This formula takes the elected billing contact from the Household. This is selected in the &quot;Send storage financial consent flow&quot;</description>
    <formula>Patients_Donors__r.Account.Billing_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>