force-app/main/default/objects/Consent_Compass__c/fields/Compass_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor__c</fullName>
    <formula>Patients_Donors__r.Account.Doctor2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Doctor</label>
    <type>Text</type>
</CustomField>