force-app/main/default/objects/Consent_Compass__c/fields/Compass_Doctor_Email__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor_Email__c</fullName>
    <formula>Patients_Donors__r.Account.Doctor2__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Doctor Email</label>
    <type>Text</type>
</CustomField>