force-app/main/default/objects/Consent_Compass__c/fields/Consent_Name__c.field-meta.xml
<CustomField>
    <fullName>Consent_Name__c</fullName>
    <formula>Cycle__r.Contact.LastName &amp; &quot; - &quot; &amp;   Cycle_Type_Picklist_To_Text__c  &amp; &quot; - &quot; &amp;  Cycle__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Name Depreciated</label>
    <type>Text</type>
</CustomField>