force-app/main/default/objects/Consent_Compass__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Consent</fullName>
            </value>
            <value>
                <fullName>Cycle Consent</fullName>
                <default>true</default>
                <label>Cycle Consent</label>
            </value>
            <value>
                <fullName>Donor Consent</fullName>
            </value>
            <value>
                <fullName>PGT Consent</fullName>
            </value>
            <value>
                <fullName>Waivers</fullName>
            </value>
            <value>
                <fullName>Recipient Consents</fullName>
            </value>
            <value>
                <fullName>Disposal Consent</fullName>
            </value>
            <value>
                <fullName>Storage Consent</fullName>
            </value>
            <value>
                <fullName>PRP Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>