force-app/main/default/objects/Consent_Compass__c/fields/Consents_for_Households__c.field-meta.xml
<CustomField>
    <fullName>Consents_for_Households__c</fullName>
    <description>For use in flows only.</description>
    <label>Consents for Households</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Consent</fullName>
            </value>
            <value>
                <fullName>Disposal Consent</fullName>
            </value>
            <value>
                <fullName>Donor Consent</fullName>
            </value>
            <value>
                <fullName>Recipient Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>