force-app/main/default/objects/Consent_Compass__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>