force-app/main/default/objects/Consent_Compass__c/fields/Cycle_Type_Picklist_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_Picklist_To_Text__c</fullName>
    <formula>text(Consent_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Type Picklist To Text</label>
    <type>Text</type>
</CustomField>