force-app/main/default/objects/Consent_Compass__c/fields/Cycle_Type_v2__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_v2__c</fullName>
    <formula>Cycle__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Type</label>
    <type>Text</type>
</CustomField>