force-app/main/default/objects/Consent_Compass__c/fields/Donor_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Donor_as_Text__c</fullName>
    <formula>Donor_Look_up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor as Text</label>
    <type>Text</type>
</CustomField>