force-app/main/default/objects/Consent_Compass__c/fields/Donor_Look_up__c.field-meta.xml
<CustomField>
    <fullName>Donor_Look_up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Look-up</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Consents (Donor Look-up)</relationshipLabel>
    <relationshipName>Compass_Consents1</relationshipName>
    <type>Lookup</type>
</CustomField>