force-app/main/default/objects/Consent_Compass__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <defaultValue>(TODAY()+90)</defaultValue>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>