force-app/main/default/objects/Consent_Compass__c/fields/Partner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Last_Name__c</fullName>
    <formula>Patients_Donors__r.Partner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Last Name</label>
    <type>Text</type>
</CustomField>