force-app/main/default/objects/Consent_Compass__c/fields/Partner_Medicare_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Medicare_Issue_Number__c</fullName>
    <formula>TEXT(Patients_Donors__r.Partner__r.Medicare__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Medicare Issue Number</label>
    <type>Text</type>
</CustomField>