force-app/main/default/objects/Consent_Compass__c/fields/Partner_Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Medicare_Number__c</fullName>
    <formula>Patients_Donors__r.Partner__r.Medicare_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Medicare Number</label>
    <type>Text</type>
</CustomField>