force-app/main/default/objects/Consent_Compass__c/fields/Partner_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Patient_ID__c</fullName>
    <formula>Patients_Donors__r.Partner__r.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Patient ID</label>
    <type>Text</type>
</CustomField>