force-app/main/default/objects/Consent_Compass__c/fields/Partner_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Post_Code__c</fullName>
    <formula>Patients_Donors__r.Partner__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Post Code</label>
    <type>Text</type>
</CustomField>