force-app/main/default/objects/Consent_Compass__c/fields/Partner_State_Territory__c.field-meta.xml
<CustomField>
    <fullName>Partner_State_Territory__c</fullName>
    <formula>Patients_Donors__r.Partner__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner State Territory</label>
    <type>Text</type>
</CustomField>