force-app/main/default/objects/Consent_Compass__c/fields/Partner_Street__c.field-meta.xml
<CustomField>
    <fullName>Partner_Street__c</fullName>
    <formula>Patients_Donors__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Street</label>
    <type>Text</type>
</CustomField>