force-app/main/default/objects/Consent_Compass__c/fields/Partner_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Partner_Suburb__c</fullName>
    <formula>Patients_Donors__r.Partner__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Suburb</label>
    <type>Text</type>
</CustomField>