force-app/main/default/objects/Consent_Compass__c/fields/Partner_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_Title__c</fullName>
    <formula>Patients_Donors__r.Partner__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Title</label>
    <type>Text</type>
</CustomField>