force-app/main/default/objects/Consent_Compass__c/fields/Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birthdate__c</fullName>
    <formula>TEXT(Patients_Donors__r.Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Birthdate</label>
    <type>Text</type>
</CustomField>