force-app/main/default/objects/Consent_Compass__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <formula>Patients_Donors__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email</label>
    <type>Text</type>
</CustomField>