force-app/main/default/objects/Consent_Compass__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <formula>Patients_Donors__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient First Name</label>
    <type>Text</type>
</CustomField>