force-app/main/default/objects/Consent_Compass__c/fields/Patient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Full_Name__c</fullName>
    <formula>Patients_Donors__r.FirstName &amp;&quot; &quot; &amp; &apos; &apos; &amp;Patients_Donors__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Full Name</label>
    <type>Text</type>
</CustomField>