force-app/main/default/objects/Consent_Compass__c/fields/Patient_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mailing_Address__c</fullName>
    <formula>Patients_Donors__r.Mailing_Street__c&amp;&quot; &quot;&amp;  Patients_Donors__r.Mailing_City__c&amp;&quot;,&quot;&amp;&quot; &quot;&amp; Patients_Donors__r.Mailing_State__c&amp;&quot; &quot;&amp; Patients_Donors__r.Mailing_Post_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Mailing Address</label>
    <type>Text</type>
</CustomField>