force-app/main/default/objects/Consent_Compass__c/fields/Patient_Medicare_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medicare_Issue_Number__c</fullName>
    <formula>TEXT(Patients_Donors__r.Medicare__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Medicare Issue Number</label>
    <type>Text</type>
</CustomField>