force-app/main/default/objects/Consent_Compass__c/fields/Patient_Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medicare_Number__c</fullName>
    <formula>Patients_Donors__r.Medicare_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Medicare Number</label>
    <type>Text</type>
</CustomField>