force-app/main/default/objects/Consent_Compass__c/fields/Patient_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mobile__c</fullName>
    <formula>Patients_Donors__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Mobile</label>
    <type>Text</type>
</CustomField>