force-app/main/default/objects/Consent_Compass__c/fields/Patient_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Post_Code__c</fullName>
    <formula>Patients_Donors__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Post Code</label>
    <type>Text</type>
</CustomField>