force-app/main/default/objects/Consent_Compass__c/fields/Patient_State_Territory__c.field-meta.xml
<CustomField>
    <fullName>Patient_State_Territory__c</fullName>
    <formula>Patients_Donors__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient State Territory</label>
    <type>Text</type>
</CustomField>