force-app/main/default/objects/Consent_Compass__c/fields/Patient_Street__c.field-meta.xml
<CustomField>
    <fullName>Patient_Street__c</fullName>
    <formula>Patients_Donors__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Street</label>
    <type>Text</type>
</CustomField>