force-app/main/default/objects/Consent_Compass__c/fields/Patient_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Patient_Suburb__c</fullName>
    <formula>Patients_Donors__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Suburb</label>
    <type>Text</type>
</CustomField>