force-app/main/default/objects/Consent_Compass__c/fields/Patient_Title__c.field-meta.xml
<CustomField>
    <fullName>Patient_Title__c</fullName>
    <formula>Patients_Donors__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Title</label>
    <type>Text</type>
</CustomField>