force-app/main/default/objects/Consent_Compass__c/fields/Patients_Donors__c.field-meta.xml
<CustomField>
    <fullName>Patients_Donors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients &amp; Donors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compass Consents</relationshipLabel>
    <relationshipName>Compass_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>