force-app/main/default/objects/Consent_Compass__c/fields/Related_Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Household_Id__c</fullName>
    <description>This is used in the send storage financial consent flow and referenced in the storage consent to allow for exporting of credit card details between consent record id and the household.</description>
    <formula>Patients_Donors__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Household Id</label>
    <type>Text</type>
</CustomField>