force-app/main/default/objects/Consent_Compass__c/fields/Valid_Consent__c.field-meta.xml
<CustomField>
    <fullName>Valid_Consent__c</fullName>
    <formula>IF(AND(Expiry_Date__c &gt; TODAY(), Consent_Signed__c = TRUE, Consent_Attached__c = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Consent</label>
    <type>Checkbox</type>
</CustomField>