force-app/main/default/objects/Consent_Compass__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cycle__c</columns>
    <columns>Household__c</columns>
    <columns>Cycle_Type_v2__c</columns>
    <columns>Valid_Consent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Consent_Type__c</field>
        <operation>equals</operation>
        <value>Recipient Consents</value>
    </filters>
    <label>All</label>
</ListView>