force-app/main/default/objects/Consent_Compass__c/listViews/allSelection_Consent_Compass.listView-meta.xml
<ListView>
    <fullName>allSelection_Consent_Compass</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>