force-app/main/default/objects/Consent_Compass__c/listViews/Patient_Services_Consent_Compass.listView-meta.xml
<ListView>
    <fullName>Patient_Services_Consent_Compass</fullName>
    <filterScope>Queue</filterScope>
    <label>Patient Services</label>
    <queue>Patient_Services</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>