force-app/main/default/objects/Consent_Compass__c/listViews/Pending_Storage_Consents.listView-meta.xml
<ListView>
    <fullName>Pending_Storage_Consents</fullName>
    <columns>NAME</columns>
    <columns>Compass_Doctor__c</columns>
    <columns>Consent_Type__c</columns>
    <columns>Cycle__c</columns>
    <columns>Cycle_Type_v2__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Consent_Type__c</field>
        <operation>equals</operation>
        <value>Storage Consent</value>
    </filters>
    <filters>
        <field>Valid_Consent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Storage Consents</label>
</ListView>