force-app/main/default/objects/Consent_Compass__c/listViews/Recent_Consents.listView-meta.xml
<ListView>
    <fullName>Recent_Consents</fullName>
    <columns>NAME</columns>
    <columns>Patients_Donors__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Consent_Signed__c</columns>
    <columns>Consent_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Consents</label>
</ListView>